	* kern/queue.h: Likewise.
	* kern/sched.h: Likewise.
	* kern/syscall_subr.c: Likewise.
	* kern/syscall_subr.h: Likewise.
	* kern/task.h: Likewise.
	* kern/thread_swap.c: Likewise.
	* kern/thread_swap.h: Likewise.
	* kern/timer.h: Likewise.
	* kern/xpr.c: Likewise.
	* kern/xpr.h: Likewise.
	* kern/zalloc.c: Likewise.
	* kern/zalloc.h: Likewise.
	* ipc/ipc_port.h: Don't include <ipc/ipc_space.h>.
	* device/net_io.h: Include <device/if_hdr.h> and <device/io_req.h>.
	* ipc/ipc_entry.h: Include <mach/mach_types.h> and <ipc/ipc_types.h>.
	* ipc/ipc_kmsg.h: Include <ipc/ipc_object.h>, <ipc/ipc_types.h> and
	<vm/vm_map.h>.
	* ipc/ipc_marequest.h: Include <mach_debug/hash_info.h> and
	<ipc/ipc_types.h>.
	* ipc/ipc_object.h: Include <ipc/ipc_types.h>.
	* ipc/ipc_right.h: Include <ipc/ipc_entry.h>.
	* ipc/ipc_space.h: Include <mach/mach_types.h> and <ipc/ipc_types.h>.
	* kern/ipc_tt.h: Include <mach/mach_types.h>.
	* kern/sched.h: Include <kern/kern_types.h>.
	* ipc/ipc_hash.c (ipc_hash_index_t): Move type definition...
	* ipc/ipc_hash.h: ... into here.

2007-04-25  Thomas Schwinge  <tschwinge@gnu.org>

	* DEVELOPMENT: Add url.

	[task #5878 --- ``Backport code from GNU Mach's trunk to
	gnumach-1-branch: i386_set_gdt, i386_get_gdt'']
	* i386/include/mach/i386/mach_i386.defs (i386_set_gdt, i386_get_gdt):
	Shift by two to maintain rpc id compatibility with OSKit-Mach.

	* linux/dev/glue/kmem.c (vmalloc_list_remove): Cast the first argument
	in the `kfree' call to what is expected.

	* linux/pcmcia-cs/glue/ds.c (kmalloc, kfree): Call `linux_kmalloc',
	respective `linux_kfree' instead.

	* kern/kalloc.h (kalloc, kget, kfree, kalloc_init): List the arguments.

2007-04-24  Michael Casadevall  <sonicmctails@gmail.com>

	* linux/src/drivers/net/ne.c (bad_clone_list): Add the RealTek 8029 PCI
	card's signature.
	<http://lists.gnu.org/archive/html/bug-hurd/2007-04/msg00039.html>

2007-04-24  Thomas Schwinge  <tschwinge@gnu.org>

	* ipc/ipc_port.h: Include <ipc/ipc_space.h>.
